fix: fix private certificate connexion
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>